--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "i18n": "^0.15.1",
     "i18next": "^23.11.2",
     "i18next-browser-languagedetector": "^7.2.1",
+    "i18next-http-backend": "^2.5.0",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.3"
   },
