--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-i18next": "^14.1.0",
     "react-markdown": "^9.0.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
