--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react-i18next": "^14.1.0",
     "react-markdown": "^9.0.1",
     "react-quill": "^2.0.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
